--- a/src/recommendation_system.ipynb
+++ b/src/recommendation_system.ipynb
@@ -31,7 +31,7 @@
         "# =========================\n",
         "# CONFIG\n",
         "# =========================\n",
-        "DATA_PATH = 'data/BD.json'\n",
+        "DATA_PATH = '../data/BD.json'\n",
         "PAGE_SIZE = 10\n",
         "SIM_WEIGHT = 0.7\n",
         "RATING_WEIGHT = 0.3\n",
